--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # --------------------------
 title: Raccoon # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: Digging to the end of the Earth # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, raccoon, sidebar,
