--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -8,8 +8,8 @@
   type: github
   icon: 'fab fa-github-alt'
 -
-  type: twitter
-  icon: 'fab fa-twitter'
+  type: instagram
+  icon: 'fab fa-instagram'
 -
   type: email
   icon: 'fas fa-envelope'
