--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ author: Raccoon # change to your full name
 
 github:
   username: juddroid # change to your github username
+instagram:
+  username: juddroid_raccoon
 
 # twitter:
 #   username: twitter_username            # change to your twitter username
