--- a/_config.yml
+++ b/_config.yml
@@ -60,8 +60,8 @@ google_analytics:
     cache: false # pv data local cache, good for the users from GFW area.
 
 disqus:
-  comments: true # boolean type, the global switch for posts comments.
-  shortname: "digging-raccoon" # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+  comments: false #true # boolean type, the global switch for posts comments.
+  shortname: "" #"digging-raccoon" # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 # Prefer color scheme setting.
 #
